hphp/test/slow/traits/consistent-override.php.expectf
Fatal error: trait declaration of property 'params' is incompatible with previous declaration in %s/test/slow/traits/consistent-override.php on line 11